--- a/jordanportfolio/package.json
+++ b/jordanportfolio/package.json
@@ -2,7 +2,9 @@
   "name": "jordanportfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://jordanoneal.github.io/portfolio",
   "dependencies": {
+    "-": "0.0.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -13,10 +15,13 @@
     "react-parallax": "^3.0.3",
     "react-reveal": "^1.2.2",
     "react-scripts": "3.4.3",
+    "save-dev": "0.0.1-security",
     "styled-components": "^5.2.0",
     "typewriter-effect": "^2.13.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -36,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
